# OpenSur

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  fragmentShader.glsl  glad.c  imgui.ini  main  main.c  main.cpp  shader.cpp  shader.h  test.sh  vertexShader.glsl
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main
include/: Lights.cpp
include/Mesh/: mesh.hpp
include/Model/: Model.hpp
include/camera/: camera.hpp
include/glad/: glad.h
include/shader/: shader.hpp
shaders/: fragmentShader.glsl  outlineVertex.glsl  simpleLight.glsl  textureShader.glsl  vertexShader.glsl  whiteFrag.glsl
src/: Mesh.cpp  Model.cpp  camera.cpp  glad.c  main.cpp  shader.cpp
